# nanoGPT

./: model.py  pyproject.toml
